infra/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: baalvion
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
